--- a/dev/css_partials/prototype.scss
+++ b/dev/css_partials/prototype.scss
@@ -2,7 +2,7 @@
 
 @import 'dev/_src/_scss/_setting';
 
-
+/*! renewal common */
 .section-inner {
     // max-width: 1280px;
     max-width: 1320px;
@@ -24,7 +24,7 @@
     display: inline-block;
 }
 
-//텍스트 말줄임
+/*! 텍스트 말줄임 */
 .ellipsis {
 // width: 각 요소에 적용
 overflow: hidden;
@@ -2866,8 +2866,7 @@ display: -webkit-box;
     }
 }
 
-
-//tablet
+/*! tablet */
 @media (max-width:1279px){
     .breadcrumb {
         // margin-top: -40px;
@@ -3004,7 +3003,7 @@ display: -webkit-box;
     }
 }
 
-
+/*! mobile */
 @media (max-width:1023px){
 
     .title-area {
